src/main/resources/site/components/bannermenu/css/bannermenu.module.css
/* make a nav with a pruple backgroundd color that has 100vw width and the li elements in the same line, to the left with a little margin between each */
.bannerNav {
    background-color: hsl(295, 55%, 24%);
    max-width: 100vw;
    min-height: 3rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    font-size: large;
}
/* this is the ul called bannerMenuItems */
.bannerMenuItems {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}
/* these are the li with a tags inside that are the bannerMenuItems */
.bannerMenuItem {
    margin: 0 1rem;
    font-size: large;
    text-decoration: none;
    color: #fff;
}
.bannerMenuItem:hover {
    text-decoration: underline;
    color: #cecece;
}
.bannerMenuItemActive {
    margin: 0 1rem;
    font-size: large;
    text-decoration: none;
    color: #fff;
    border-bottom: 2px solid #fff;
}

/* for the dropdown */
.menuItem {
    margin: 0 1rem;
    font-size: large;
    text-decoration: none;
    color: #000;
  }
  .menuItem:hover {
    color: rgba(255,255,255,0.8);
  }
  .menuItem a {
    color: black;
    text-decoration: none;
  }
.dropdown {
    position: relative;
    display: inline-block;
  }
  .dropdownbtn {
    border:none;
  }
  .dropdownContent {
    display: none;
    position: absolute;
    background-color: #591c5f;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  .dropdownContent a {
    color: #fff;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  .dropdown-content a:hover {background-color: #ddd;}
  .dropdown:hover .dropdownContent {display: block;}

/* on mobile make all the a tags display none */
@media only screen and (max-width: 600px) {
    .bannerMenuItem {
        display: none;
    }
}

